# PixieVeil

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PROJECT_STRUCTURE  QUICKSTART.md  README.md  TODO  install.py  pyproject.toml  python run.py  requirements.txt  run.py
config/: settings.yaml.example
path/to/pixieveil/dicom_server/: handlers.py
pixieveil/: __init__.py
pixieveil/config/: __init__.py  settings.py  settings.yaml.example
pixieveil/dashboard/: __init__.py  main.py  server.py  sse.py
pixieveil/dashboard/templates/: index.html  metrics.html  status.html
pixieveil/dicom_server/: __init__.py  handlers.py  server.py
pixieveil/processing/: __init__.py  anonymizer.py  defacer.py  pipeline.py  series_filter.py  study_manager.py
pixieveil/storage/: __init__.py  dicom_storage.py  remote_storage.py  storage_manager.py  study_sidecar.py  zip_manager.py
pixieveil/utils/: logger.py
